--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,8 @@
-body {
-  background-color: black;
-}
-
 h1 {
   display: flex;
   justify-content: center;
   font-size: 50px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: white;
 }
 
 #poga {
@@ -17,7 +12,12 @@ h1 {
 }
 
 #popUp {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 }
+
+/*#form {
+  display: ;
+}
+*/
