--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ h1 {
   align-items: center;
 }
 
+#pievienotJaunu {
+  display: flex;
+  justify-content: center;
+}
+
 /*#form {
   display: ;
 }
