--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,22 @@
+body {
+  background-color: darkslategrey;
+}
+
 h1 {
   display: flex;
   justify-content: center;
   font-size: 50px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+}
+
+h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h3 {
+  margin-left: 15px;
+  margin-bottom: 10px;
 }
 
 #poga {
@@ -20,9 +34,16 @@ h1 {
 #pievienotJaunu {
   display: flex;
   justify-content: center;
+  color: white;
 }
 
-/*#form {
-  display: ;
+.inputLogs {
+  display: flex;
+  justify-content: center;
 }
-*/
+
+.prece {
+  background-color: gray;
+  color: black;
+  border-radius: 25px;
+}
